# feature-homework_10_1

./: .gitignore.txt  flake8.txt  main .py  pyproject.toml
src/: operations .py  widget.py.txt
src/masks/: masks.py
tests/: test_masks.py  test_widget.py.txt
